// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should combine multiple variable values with or 1`] = `
<Fragment>
  <span
    title="Var: varName"
  >
    <ForwardRef
      className="parameterName"
      type="blue"
    >
      Var
      : 
      <b>
        varName
      </b>
    </ForwardRef>
  </span>
  <span
    className="filterText"
  >
    <span>
       
      is
       
    </span>
    <span
      key="0"
    >
      <b>
        varValue
      </b>
      <span>
        <span>
           
          or
           
        </span>
      </span>
    </span>
    <span
      key="1"
    >
      <b>
        varValue2
      </b>
    </span>
  </span>
</Fragment>
`;

exports[`should combine multiple variable values with or 2`] = `
<Fragment>
  <span
    title="Var: varName"
  >
    <ForwardRef
      className="parameterName"
      type="blue"
    >
      Var
      : 
      <b>
        varName
      </b>
    </ForwardRef>
  </span>
  <span
    className="filterText"
  >
    <span>
       
      is neither
       
    </span>
    <span
      key="0"
    >
      <b>
        null
      </b>
      <span>
        <span>
           
          nor
           
        </span>
      </span>
      <b>
        undefined
      </b>
      <span>
        <span>
           
          nor
           
        </span>
      </span>
    </span>
    <span
      key="1"
    >
      <b>
        varValue
      </b>
      <span>
        <span>
           
          nor
           
        </span>
      </span>
    </span>
    <span
      key="2"
    >
      <b>
        varValue2
      </b>
    </span>
  </span>
</Fragment>
`;

exports[`should display correct preview even if no operator is defined 1`] = `
<Fragment>
  <span
    title="Var: varName"
  >
    <ForwardRef
      className="parameterName"
      type="blue"
    >
      Var
      : 
      <b>
        varName
      </b>
    </ForwardRef>
  </span>
  <span
    className="filterText"
  >
    <span>
       
      is
       
    </span>
    <span
      key="0"
    >
      <b>
        true
      </b>
      <span>
        <span>
           
          or
           
        </span>
      </span>
    </span>
    <span
      key="1"
    >
      <b>
        false
      </b>
    </span>
  </span>
</Fragment>
`;

exports[`should use contains operators 1`] = `
<Fragment>
  <span
    title="Var: varName"
  >
    <ForwardRef
      className="parameterName"
      type="blue"
    >
      Var
      : 
      <b>
        varName
      </b>
    </ForwardRef>
  </span>
  <span
    className="filterText"
  >
    <span>
       
      contains
       
    </span>
    <span
      key="0"
    >
      <b>
        varValue
      </b>
    </span>
  </span>
</Fragment>
`;

exports[`should use less/greater for comparison operators 1`] = `
<Fragment>
  <span
    title="Var: varName"
  >
    <ForwardRef
      className="parameterName"
      type="blue"
    >
      Var
      : 
      <b>
        varName
      </b>
    </ForwardRef>
  </span>
  <span
    className="filterText"
  >
    <span>
       
      is less than
       
    </span>
    <span
      key="0"
    >
      <b>
        varValue
      </b>
    </span>
  </span>
</Fragment>
`;
